# hearthglow

./: .gitignore  Cargo.toml  README.md  configuration.toml  db.sqlite
frontend/: README.md
frontend/src/: main.ts
src/: main.rs
src/cli/: mod.rs
src/data/: configuration.rs  dbconnector.rs  mod.rs
src/entity/: calendar_events.rs  mod.rs  people.rs  person_parent.rs  star_charts.rs
src/entity/helpers/: mod.rs
src/server/: mod.rs  types.rs
