[package]
name = "hearthglow"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
egui = { version = "0.33.3", features = ["default"] }
sea-orm = { version = "2.0.0-rc.30", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
    "debug-print",
    "schema-sync",
    "entity-registry",
] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
toml = "0.9.11"
env_logger = "0.11.8"
log = "0.4.19"
anyhow = "1.0.100"
chrono = { version = "0.4.41", features = ["clock"] }
axum = "0.7.9"
